@@ -36,6 +36,8 @@ import java.beans.PropertyDescriptor;
 import java.io.Serializable;
 import java.lang.reflect.Method;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
 
 import static org.apache.commons.lang3.StringUtils.isEmpty;
 
@@ -46,6 +48,7 @@ public class PlatformRepositoryImpl<T, ID extends Serializable> extends SimpleJp
 
     private final EntityManager entityManager;
     private final JpaEntityInformation<T, ?> entityInformation;
+    private final Map<Class, JpaEntityInformation<?, ?>> entityInformationMap = new HashMap<>();
 
     public PlatformRepositoryImpl(JpaEntityInformation<T, ?> entityInformation, EntityManager entityManager) {
         super(entityInformation, entityManager);
@@ -124,7 +127,8 @@ public class PlatformRepositoryImpl<T, ID extends Serializable> extends SimpleJp
         Long total = count(conditions);
 
         Query query = new JpqlQueryHolder(conditions, pageable.getSort()).createQuery();
-        query.setFirstResult(new Long(pageable.getOffset()).intValue());
+
+        query.setFirstResult(Long.valueOf(pageable.getOffset()).intValue());
         query.setMaxResults(pageable.getPageSize());
 
         List<T> content = total > pageable.getOffset() ? query.getResultList() : Collections.<T>emptyList();
@@ -215,7 +219,7 @@ public class PlatformRepositoryImpl<T, ID extends Serializable> extends SimpleJp
         Long total = count(conditions, "distinct " + StringUtils.join(groupFields, ","));
 
         Query query = new JpqlQueryHolder(conditions, pageable.getSort()).createGroupQuery(selectFields, groupFields);
-        query.setFirstResult(new Long(pageable.getOffset()).intValue());
+        query.setFirstResult(Long.valueOf(pageable.getOffset()).intValue());
         query.setMaxResults(pageable.getPageSize());
 
         List<Map> content = total > pageable.getOffset() ? query.getResultList() : Collections.<Map>emptyList();
@@ -286,7 +290,7 @@ public class PlatformRepositoryImpl<T, ID extends Serializable> extends SimpleJp
         Long total = Long.valueOf(list.size() + "");
 
         Query query = new JpqlQueryHolder(conditions, pageable.getSort()).createGroupQuery(fields, fields);
-        query.setFirstResult(new Long(pageable.getOffset()).intValue());
+        query.setFirstResult(Long.valueOf(pageable.getOffset()).intValue());
         query.setMaxResults(pageable.getPageSize());
 
         List<Map> content = total > pageable.getOffset() ? query.getResultList() : Collections.<Map>emptyList();
@@ -373,7 +377,7 @@ public class PlatformRepositoryImpl<T, ID extends Serializable> extends SimpleJp
 
     @Override
     public List<?> selectSql(String sql, Conditions conditions) {
-        Query query = new JpqlQueryHolder(conditions).createSqlQuery(sql);
+        Query query = new JpqlQueryHolder(conditions).createJpqlQuery(sql);
         return query.getResultList();
     }
 
@@ -471,9 +475,13 @@ public class PlatformRepositoryImpl<T, ID extends Serializable> extends SimpleJp
         }
 
         // 使用指定的sql执行查询
-        private Query createSqlQuery(String ql) {
-            ql += applyCondition();
-            Query query = entityManager.createQuery(ql);
+        private Query createJpqlQuery(String jpql) {
+            StringBuilder sb = new StringBuilder();
+            // select x from table
+            sb.append(jpql)
+                    //where
+                    .append(applyCondition());
+            Query query = entityManager.createQuery(QueryUtils.applySorting(sb.toString(), sort, ALIAS));
             applyQueryParameter(query);
             return query;
         }
